--- a/intro-to-rnns/Anna_KaRNNa.ipynb
+++ b/intro-to-rnns/Anna_KaRNNa.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Anna KaRNNa\n",
     "\n",
@@ -17,7 +20,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -30,7 +35,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "First we'll load the text file and convert it into integers for our network to use. Here I'm creating a couple dictionaries to convert the characters to and from integers. Encoding the characters as integers makes it easier to use as input in the network."
    ]
@@ -39,7 +47,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -53,7 +63,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Let's check out the first 100 characters, make sure everything is peachy. According to the [American Book Review](http://americanbookreview.org/100bestlines.asp), this is the 6th best first line of a book ever."
    ]
@@ -61,7 +74,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -80,7 +97,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "And we can see the characters encoded as integers."
    ]
@@ -88,7 +108,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -98,7 +122,7 @@
        "        1, 57, 68, 65, 67, 61, 26,  1, 61, 78, 61, 74, 81,  1, 77, 70, 64,\n",
        "       57, 72, 72, 81,  1, 62, 57, 69, 65, 68, 81,  1, 65, 75,  1, 77, 70,\n",
        "       64, 57, 72, 72, 81,  1, 65, 70,  1, 65, 76, 75,  1, 71, 79, 70,  0,\n",
-       "       79, 57, 81, 13,  0,  0, 33, 78, 61, 74, 81, 76, 64, 65, 70], dtype=int32)"
+       "       79, 57, 81, 13,  0,  0, 33, 78, 61, 74, 81, 76, 64, 65, 70])"
       ]
      },
      "execution_count": 4,
@@ -112,7 +136,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Since the network is working with individual characters, it's similar to a classification problem in which we are trying to predict the next character from the previous text.  Here's how many 'classes' our network has to pick from."
    ]
@@ -120,7 +147,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -139,7 +170,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Making training mini-batches\n",
     "\n",
@@ -165,9 +199,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -187,7 +223,7 @@
     "    n_batches = len(arr) // characters_per_batch\n",
     "    \n",
     "    # Keep only enough characters to make full batches\n",
-    "    arr = arr[:n_batches * chars_per_batch]\n",
+    "    arr = arr[:n_batches * characters_per_batch]\n",
     "    \n",
     "    # Reshape into batch_size rows\n",
     "    arr = arr.reshape((batch_size, -1))\n",
@@ -207,16 +243,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Now I'll make my data sets and we can check out what's going on here. Here I'm going to use a batch size of 10 and 50 sequence steps."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -226,11 +267,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      " [[31 64 57 72 76 61 74  1 16  0]\n",
+      " [ 1 57 69  1 70 71 76  1 63 71]\n",
+      " [78 65 70 13  0  0  3 53 61 75]\n",
+      " [70  1 60 77 74 65 70 63  1 64]\n",
+      " [ 1 65 76  1 65 75 11  1 75 65]\n",
+      " [ 1 37 76  1 79 57 75  0 71 70]\n",
+      " [64 61 70  1 59 71 69 61  1 62]\n",
+      " [26  1 58 77 76  1 70 71 79  1]\n",
+      " [76  1 65 75 70  7 76 13  1 48]\n",
+      " [ 1 75 57 65 60  1 76 71  1 64]]\n",
+      "\n",
+      "y\n",
+      " [[64 57 72 76 61 74  1 16  0  0]\n",
+      " [57 69  1 70 71 76  1 63 71 65]\n",
+      " [65 70 13  0  0  3 53 61 75 11]\n",
+      " [ 1 60 77 74 65 70 63  1 64 65]\n",
+      " [65 76  1 65 75 11  1 75 65 74]\n",
+      " [37 76  1 79 57 75  0 71 70 68]\n",
+      " [61 70  1 59 71 69 61  1 62 71]\n",
+      " [ 1 58 77 76  1 70 71 79  1 75]\n",
+      " [ 1 65 75 70  7 76 13  1 48 64]\n",
+      " [75 57 65 60  1 76 71  1 64 61]]\n"
+     ]
+    }
+   ],
    "source": [
     "print('x\\n', x[:10, :10])\n",
     "print('\\ny\\n', y[:10, :10])"
@@ -238,7 +311,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "If you implemented `get_batches` correctly, the above output should look something like \n",
     "```\n",
@@ -271,7 +347,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Building the model\n",
     "\n",
@@ -289,9 +368,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -305,18 +386,21 @@
     "        \n",
     "    '''\n",
     "    # Declare placeholders we'll feed into the graph\n",
-    "    inputs = \n",
-    "    targets = \n",
+    "    inputs = tf.placeholders(tf.int32, [batch_size, num_steps], name='inputs')\n",
+    "    targets = tf.placeholders(tf.int32, [batch_size, num_steps], name='targets')\n",
     "    \n",
     "    # Keep probability placeholder for drop out layers\n",
-    "    keep_prob = \n",
+    "    keep_prob = tf.placeholders(tf.float32, name='keep_prob')\n",
     "    \n",
     "    return inputs, targets, keep_prob"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### LSTM Cell\n",
     "\n",
@@ -364,9 +448,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -383,21 +469,24 @@
     "    '''\n",
     "    ### Build the LSTM Cell\n",
     "    # Use a basic LSTM cell\n",
-    "    lstm = \n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(lstm_size)\n",
     "    \n",
     "    # Add dropout to the cell outputs\n",
-    "    drop = \n",
+    "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
     "    \n",
     "    # Stack up multiple LSTM layers, for deep learning\n",
-    "    cell = \n",
-    "    initial_state = \n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([build_cell(lstm_size, keep_prob) for _ in range(num_layers)])\n",
+    "    initial_state = cell.zero_state(batch_size, tf.float32)\n",
     "    \n",
     "    return cell, initial_state"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### RNN Output\n",
     "\n",
@@ -416,7 +505,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -434,29 +525,35 @@
     "\n",
     "    # Reshape output so it's a bunch of rows, one row for each step for each sequence.\n",
     "    # Concatenate lstm_output over axis 1 (the columns)\n",
-    "    seq_output = \n",
+    "    seq_output = tf.concat(lstm_output, axis=1)\n",
     "    # Reshape seq_output to a 2D tensor with lstm_size columns\n",
-    "    x = \n",
+    "    # Special value -1, that dimension is computed so that the total size remains constant\n",
+    "    x = tf.reshape(seq_output, [-1, in_size])\n",
     "    \n",
     "    # Connect the RNN outputs to a softmax layer\n",
     "    with tf.variable_scope('softmax'):\n",
     "        # Create the weight and bias variables here\n",
-    "        softmax_w = \n",
-    "        softmax_b = \n",
+    "        # Outputs random values from a truncated normal distribution.\n",
+    "        softmax_w = tf.Variable(tf.truncated_normal(in_size, out_size), stddev=0.1))\n",
+    "        softmax_b = tf.Variable(tf.zeros(out_size))\n",
     "    \n",
     "    # Since output is a bunch of rows of RNN cell outputs, logits will be a bunch\n",
     "    # of rows of logit outputs, one for each step and sequence\n",
-    "    logits = \n",
+    "    # Multiplies matrix a by matrix b, producing a * b\n",
+    "    logits = tf.matmul(x, softmax_w) + softmax_b\n",
     "    \n",
     "    # Use softmax to get the probabilities for predicted characters\n",
-    "    out = \n",
+    "    out = tf.softmax(logits, name='predictions')\n",
     "    \n",
     "    return out, logits"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Training loss\n",
     "\n",
@@ -471,7 +568,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -499,7 +598,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Optimizer\n",
     "\n",
@@ -510,7 +612,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -534,7 +638,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Build the network\n",
     "\n",
@@ -547,7 +654,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -590,7 +699,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Hyperparameters\n",
     "\n",
@@ -638,7 +750,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -652,7 +766,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Time for training\n",
     "\n",
@@ -670,6 +787,8 @@
    "execution_count": null,
    "metadata": {
     "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [],
@@ -722,7 +841,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Saved checkpoints\n",
     "\n",
@@ -733,7 +855,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -742,7 +866,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Sampling\n",
     "\n",
@@ -756,7 +883,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -772,7 +901,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -811,7 +942,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Here, pass in the path to a checkpoint and sample from the network."
    ]
@@ -820,7 +954,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -831,7 +967,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -844,7 +982,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -857,7 +997,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -870,7 +1012,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -883,7 +1027,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -897,7 +1041,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
